fix header show alignment

--- a/app/assets/stylesheets/partials/_postcard.scss
+++ b/app/assets/stylesheets/partials/_postcard.scss
@@ -99,6 +99,7 @@ button {
  .post-top-row{
    display: flex;
    flex-direction: row;
+   align-items: center;
    justify-content:space-between
  }
 
