--- a/app/assets/stylesheets/partials/_profile.scss
+++ b/app/assets/stylesheets/partials/_profile.scss
@@ -74,3 +74,11 @@ align-items: center;
 .bi {
   font-size: 30px;
 }
+
+.profile-buttons{
+  color: gray;
+}
+
+.profile-buttons a {
+  color: black;
+}
